--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-HELLO WORLD
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>this is my other line of code</h1>
+</body>
+</html>
