--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>this is my other line of code</h1>
+    <section>
+        <h1>section 2</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Laudantium aliquid sint optio quas aut, 
+            incidunt impedit voluptates iusto rem sunt sit earum quod. 
+            Harum labore accusamus nesciunt nobis, id adipisci?</p>
+        
+        <p>Lorem ipsum dolor sit amet 
+            consectetur adipisicing elit. Blanditiis, ab. Minus earum
+            repellat error tenetur hic quisquam perferendis id repudiandae.</p>
+    </section>
 </body>
 </html>
